adding for fastapi

--- a/langgraph.ipynb
+++ b/langgraph.ipynb
@@ -673,19 +673,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 62,
    "id": "9c149cdd-35fd-47c7-aa6d-a7ebc7517645",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from fastapi import FastAPI\n",
+    "api = FastAPI()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 63,
    "id": "6dd5603a-f564-4cff-bc5b-6fc997990293",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#GET, POST, PUT, DELETE\n",
+    "@api.get('/')\n",
+    "def index():\n",
+    "    return {'message':'Hello World'}"
+   ]
   },
   {
    "cell_type": "code",
@@ -693,7 +701,9 @@
    "id": "2c09b949-d34b-4131-a1d0-e54050373660",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "uvcorn "
+   ]
   },
   {
    "cell_type": "code",
